--- a/estilos/datos.css
+++ b/estilos/datos.css
@@ -1,7 +1,7 @@
 .datos{
     color: black;
-    font-size: 30px;
-    margin-top: 50px;
+    font-size: 1.5vw;
+    margin-top: 2vw;
     margin-right: 40%;
     margin-left: 40%;
     font-family: 'NHL San Jose';
@@ -15,25 +15,23 @@
     margin-left: 10%;
     margin-right: 10%;
     text-align: left;
-    font-size: 27px;
+    font-size: 1.5vw;
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 3px solid black;
     border-radius: 10px;
     padding: 15px 25px;
     background-color: #64A8C5;
-
 }
 .datostext2{
     margin-left: 10%;
     margin-right: 10%;
     text-align: left;
-    font-size: 27px;
+    font-size: 1.5vw;
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 3px solid black;
     border-radius: 10px;
     padding: 15px 25px;
     background-color: #64A8C5;
-
 }
