--- a/estilos/404.css
+++ b/estilos/404.css
@@ -11,7 +11,7 @@
     background-position: bottom;
     background-size: 100%;
 
-    border: 0.4vw solid black;
+    border: 0.3vw solid black;
     border-radius: 1vw;
     padding: 3vw;
     text-align: center;
@@ -19,7 +19,7 @@
 }
 .cartel{
     display: block;
-    margin: 0 auto 2vw auto;
+    margin: auto;
     width: 10vw;
     height: auto;
 }
@@ -28,7 +28,6 @@
     margin: 1vw 0;
     color: white;
     font-size: 2vw;
-    box-shadow: 0 0 1vw black;
 }
 .vi{
     font-family: sans-serif;
