--- a/estilos/contacto.css
+++ b/estilos/contacto.css
@@ -2,56 +2,129 @@ body{
     background-image: url(https://i.redd.it/kz0r48rd8x241.jpg);
     background-repeat: no-repeat;
     background-position: bottom;
-    background-size: cover;
+    background-size: 110vw;
 }
-.nombre{
-    font-size: 20px;
-    margin-left: 1%;
-}
-.cuadro{
-    border: 3px solid  black;
-    border-radius: 10px;
-    margin-left: 1%;
-    color: gray;
-    margin-right: 1%;
-    background-color: white;
-    padding: 5px;
-}
-.cuadro2
-{
+.formulario{
+    margin-left: 20vw;
+    margin-right: 20vw;
+    margin-top: 5vw;
+    padding: 1vw;
+    background-color: rgb(212, 212, 212);
     border: 3px solid black;
-    border-radius: 10px;
-    margin-left: 1%;
-    padding-bottom: 350px;
-    color: gray;
-    margin-right: 1%;
-    background-color: white;
+    border-radius: 20px;
 }
-.enviar{
-    font-size: 30px;
-    margin-left: 1%;
-    padding: 10px;
-    background-color: black;
+#mensaje label{
+    font-size: 1vw;
+    font-weight: 600;
+    color: black;
+}
+#mensaje input{
+    color: black;
+    width: 99%;
+    padding: .2vw;
+    padding-bottom: 5vw;
+    font-size: 1vw;
+    border: 3px solid black;
+    border-radius: 1vw;
+    outline: none;
+    background: white;
+    margin-bottom: 2vw;
+    margin-top: .5%;
+}
+#entrada label{
+    font-size: 1vw;
+    font-weight: 600;
+    color: black;
+}
+#entrada input{
+    margin-top: .5%;
+    margin-bottom: .5%;
+    color: black;
+    width: 99%;
+    padding: .2vw;
+    padding-bottom: .3vw;
+    font-size: 1vw;
+    border: 3px solid black;
+    border-radius: 1vw;
+    outline: none;
+    background: white;
+}
+#accion input{
+    width: 100%;
+    padding: 1vw;
+    font-size: 1.1vw;
+    font-weight: 600;
     color: white;
-    text-align: center;
-    margin-right: 1%;
+    background: black;
+    border: none;
+    border-radius: 1vw;
 }
-.redes{
-    background-color: transparent;
-    width: 100px;
-    margin-left: 4.5%;
-    
+#accion input:hover {
+    transform: scale(1.01);
 }
-.redest{
-    font-size: 30px;
-    text-align: left;
-    margin-left: 10%;
+ul {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  transform: translate(-50%, -50%);
 }
-.cuadrog{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-left: 65%;
-    margin-right: 5%;
-    margin-top: -160px;
-    background-color: #ecebeb;
+
+ul li {
+  list-style: none;
+}
+
+ul li a {
+  width: 2vw;
+  height: 2vw;
+  background-color: #fff;
+  text-align: center;
+  line-height: 2vw;
+  font-size: .6vw;
+  margin: 0 10px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  border: 3px solid #fff;
+  z-index: 1;
+}
+
+ul li a .icon {
+  position: relative;
+  color: #262626;
+  transition: .5s;
+  z-index: 3;
+}
+
+ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+ul li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
+}
+
+ul li a:hover:before {
+  top: 0;
+}
+
+ul li:nth-child(1) a:before{
+  background: #3b5999;
+}
+
+ul li:nth-child(2) a:before{
+  background: #55acee;
+}
+
+ul li:nth-child(4) a:before {
+  background: #dd4b39;
 }
