--- a/estilos/general.css
+++ b/estilos/general.css
@@ -1,83 +1,85 @@
     @import url(https://db.onlinewebfonts.com/c/4fab58d20f27451d926cab0757c4cd6a?family=NHL+San+Jose);
 body {
     background-color: #ecebeb;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    width: 100vw;
 }
-nav, a{
-    background-color: #12100D;
-    color: white;
-    text-decoration: none solid;
-    text-align: center;
-    font-family: 'NHL San Jose';
-    padding: 10px;
-    font-size: 20px;
-}
-.banner{
-    width: 100%;
-    height: 120px;
+#banner{
+    width: 100vw;
+    height: 4vw;
     background-image: url(https://cdnb.artstation.com/p/assets/images/images/041/235/741/large/chinmay-thorat-render-cam-1-final-ps-depth-newcr.jpg?1631129931);
     background-size:cover;
     background-position: center 61%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-h1{
-    position: absolute;
+#banner h1{
+    margin: 0;
     text-align: center;
-    width: 100%;
-    margin-top: 19px;
 }
 .ford{
     color: #64A8C5;
-    font-size: 80px;
+    font-size: 3vw;
     font-family: 'NHL San Jose';
-    text-align: center;
-    margin-right: 3px;
     background-color: transparent;
     text-shadow: 5px 5px 6px #000000;
+    margin-right: 6px;
+    text-decoration: none;
 }
 .v{
     color: #302A22;
-    font-size: 33px;
+    font-size: 1.5vw;
     font-family: 'NHL San Jose';
-    text-align: center;
     background-color: transparent;
     text-shadow: 5px 5px 6px #000000;
+    margin: 0 4px;
+    text-decoration: none;
 }
 .ferrari{
     color: #d04130;
-    font-size: 80px;
+    font-size: 3vw;
     font-family: 'NHL San Jose';
-    text-align: center;
-    margin-left: 3px;
     background-color: transparent;
     text-shadow: 5px 5px 6px #000000;
+    margin-left: 6px;
+    text-decoration: none;
 }
-.sub{
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 6px;
-    padding-bottom: 4px;
-    margin: 80px;
-    text-align: center;
-    font-size: 120%;
+nav{
+    background-color: #12100D;
+    padding: .1vw 0;
+    margin: 0;
 }
-.subactivo{
+#sub{
+    display: flex;
+    gap: 12%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 0;
+}
+#sub a{
+    color: white;
+    text-decoration: none;
+    font-family: 'NHL San Jose';
+    font-size: .9vw;
+    padding: 6px 12px;
+    background-color: transparent;
+    display: inline-block;
+}
+#sub a:hover{
+    background-color: #333;
+    border-radius: 5px;
+}
+#sub a.subactivo{
     color: #d04130;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 6px;
-    padding-bottom: 4px;
-    margin: 80px;
-    text-align: center;
-    font-size: 120%;
 }
 footer{
     background-color: #12100D;
     color: white;
     text-decoration: none solid;
     text-align: right;
-    padding: 10px;
-    font-size: 20px;
-    margin-top: 230px;
-    margin-bottom: 0px;
+    padding: .25vw;
+    font-size: .7vw;
+    margin-top: 12vw;
 }
