--- a/estilos/reparto.css
+++ b/estilos/reparto.css
@@ -1,58 +1,29 @@
-
+#cuadros{
+    display: flex;
+    gap: 2rem;
+    padding: 2rem;
+}
+.card{
+    width: 20%;
+    border: 3px solid black;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #64A8C5;
+}
 .mta{
-    height: 350px;
-    margin-left: 5.21%;
-    margin-right: 1.56%;
+    width: 10.5vw;
+    height: auto;
     margin-top: 5%;
     border: 3px solid black;
     border-radius: 10px;
 }
-.a1{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-right: 81.8%;
-    margin-left: 4.79%;
-    padding: 5px;
-    text-align: center;
-    background-color: #64A8C5;
+.card:hover {
+    transform: scale(1.03);
 }
-.a2{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-right: 61.88%;
-    margin-left: 24.43%;
-    padding: 5px;
-    text-align: center;
-    margin-top: -183px;
-    background-color: #64A8C5;
+p{
+    font-size: .9vw;
 }
-.a3{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-right: 42.40%;
-    margin-left: 43.65%;
-    padding: 5px;
-    text-align: center;
-    margin-top: -180px;
-    background-color: #64A8C5;
-}
-.a4{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-right: 22.92%;
-    margin-left: 63.13%;
-    padding: 5px;
-    text-align: center;
-    margin-top: -163px;
-    background-color: #64A8C5;
-}
-.a5{
-    border: 3px solid black;
-    border-radius: 10px;
-    margin-right: 3.54%;
-    margin-left: 82.66%;
-    padding: 5px;
-    text-align: center;
-    margin-top: -183px;
-    background-color: #64A8C5;
+h4{
+    font-size: 1vw;
+    margin-top: 8%;
 }
