--- a/estilos/general.css
+++ b/estilos/general.css
@@ -7,7 +7,9 @@
 html{
   font-size: 100%;
 }
-
+main{
+  padding-inline: clamp(1rem, 4vw, 2.5rem);
+}
 body{
   background-color: #ecebeb;
   margin: 0;
