--- a/estilos/404.css
+++ b/estilos/404.css
@@ -17,6 +17,7 @@
     padding: 2rem 1.25rem;
     text-align: center;
     box-shadow: 0 0 18px black;
+    font-family: 'Poppins', sans-serif;
 }
 .cartel{
     display: block;
